added new file for geometry related utility functions

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+<script src="js/Geometry.js"></script>
 <script type="text/javascript">
 /**
  * snapgrid
@@ -26,38 +27,6 @@ var snapToEdges = false;
 
 //line-tool variables
 var pendingLineStartPoint = null; //used by the line-tool
-
-function isPointOnLineSegment(lineSeg, point, tolerance) {
-    //calculate slope of the line, in case of vertical line divide by zero like a boss
-    var m = (lineSeg.p2.y - lineSeg.p1.y)
-          / (lineSeg.p2.x - lineSeg.p1.x);
-    var x,y;
-    if (Math.abs(m) == Infinity) {
-        x = point.x;
-        y = point.y;
-    } else {
-        //calculate what y of the line would be if x were exactly point.x
-        y = m * (point.x - lineSeg.p1.x) + lineSeg.p1.y;
-        //calculate what x of the line would be if y were exactly point.y
-        x = (point.y - lineSeg.p1.y) / m + lineSeg.p1.x;
-    }
-    //are calculated values within tolerance?
-    if (Math.abs(y - point.y) < tolerance && Math.abs(y - point.y) < tolerance) {
-        //point is (approximately) on the line but is it within the line segment?
-        //determine extrema of the line segment
-        var minX = Math.min(lineSeg.p1.x, lineSeg.p2.x);
-        var minY = Math.min(lineSeg.p1.y, lineSeg.p2.y);
-        var maxX = Math.max(lineSeg.p1.x, lineSeg.p2.x);
-        var maxY = Math.max(lineSeg.p1.y, lineSeg.p2.y);
-        if (   (point.x >= minX || minX - point.x < tolerance)
-            && (point.y >= minY || minY - point.y < tolerance)
-            && (point.x <= maxX || point.x - maxX < tolerance)
-            && (point.y <= maxY || point.y - maxY < tolerance)) {
-            return true;
-        }
-    }
-    return false;
-}
 
 /** 
  * Responsible for drawing the grid and all existing line segments
@@ -120,7 +89,7 @@ function updateMouseHoverLine() {
         lineSeg = lineSegments[i];
         //determine if cursor position is on or very near a line
         var TOLERANCE = CELL_SIZE/2;
-        if (isPointOnLineSegment(lineSeg, {x:mouseX,y:mouseY}, TOLERANCE)) {
+        if (Geometry.isPointOnLineSegment(lineSeg, {x:mouseX,y:mouseY}, TOLERANCE)) {
             lineSeg.hover = true;
         } else {
             lineSeg.hover = false;
@@ -153,13 +122,13 @@ function updateSnapPos() {
         var TOLERANCE = CELL_SIZE / 2;
         for (var i=0; i<lineSegments.length; ++i) {
             //if mouse position is within TOLERANCE distance of one vertex of a line exactly
-            if ( Math.abs(mouseX - lineSegments[i].p1.x) < TOLERANCE 
-              && Math.abs(mouseY - lineSegments[i].p1.y) < TOLERANCE) {
+            if (Geometry.distance(mouseX, mouseY, 
+                    lineSegments[i].p1.x, lineSegments[i].p1.y) < TOLERANCE) {
                 snapX = lineSegments[i].p1.x;
                 snapY = lineSegments[i].p1.y;
                 return;
-            } else if ( Math.abs(mouseX - lineSegments[i].p2.x) < TOLERANCE
-                     && Math.abs(mouseY - lineSegments[i].p2.y) < TOLERANCE) {
+            } else if (Geometry.distance(mouseX, mouseY, 
+                    lineSegments[i].p2.x, lineSegments[i].p2.y) < TOLERANCE) {
                 snapX = lineSegments[i].p2.x;
                 snapY = lineSegments[i].p2.y;
                 return;
