added delete key handler and Keys enumeration

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
 <script src="js/Geometry.js"></script>
 <script src="js/LineSegment.js"></script>
+<script src="js/Keys.js"></script>
 <script src="js/snapgrid.js"></script>
 <style type="text/css">
 #canvas {
